[CORE] ArmorStandEditor 1.19.4-42 (#223)
* [CORE] SonarLint Code Review Remarks

Signed-off-by: Wolfieheart <xmakeitrain94@gmail.com>

* [CORE] Update Copyright

Signed-off-by: Wolfieheart <xmakeitrain94@gmail.com>

* [CORE] Add Kugge as Contributer/Author in plugin.yml

Signed-off-by: Wolfieheart <xmakeitrain94@gmail.com>

* [CORE] Sonar Remarks and remove useless comments on Imports (More Readable without them)

Signed-off-by: Wolfieheart <xmakeitrain94@gmail.com>

* [CORE] Add Support Discord to Translation Files.

Signed-off-by: Wolfieheart <xmakeitrain94@gmail.com>

* [CORE] Fis a Comment and Update Metrics Version

Signed-off-by: Wolfieheart <xmakeitrain94@gmail.com>

---------

Signed-off-by: Wolfieheart <xmakeitrain94@gmail.com>